crates/templates/tests/snapshots/function__function_template-10.snap
---
source: crates/templates/tests/function.rs
description: Function with local default option
expression: output
---
# Function with a local default option
foo() {
  local rargs_default

  # Parse command arguments
  parse_foo_arguments "$@"

  
    
  if [[ -z "$rargs_default" ]]; then
    rargs_default="foo"
  fi
    
  echo "No implementation body found for function foo"
}
