crates/templates/tests/snapshots/function__function_template-12.snap
---
source: crates/templates/tests/function.rs
description: "Function with a local and two global default options, one with the same name"
expression: output
---
# Function with a local default option
foo() {
  local rargs_default
  local rargs_foo

  # Parse command arguments
  parse_foo_arguments "$@"

  
    
  if [[ -z "$rargs_default" ]]; then
    rargs_default="true"
  fi
    
    
  if [[ -z "$rargs_foo" ]]; then
    rargs_foo="foo"
  fi
    
  echo "No implementation body found for function foo"
}
