crates/templates/tests/snapshots/function__function_template-18.snap
---
source: crates/templates/tests/function.rs
description: Function with a local option with choices
expression: output
---
# Function with a local option with choices
foo() {
  local rargs_choices
  # Parse command arguments
  parse_foo_arguments "$@"

  
  if [[ -n "$rargs_choices" ]]; then
    if [[ ! "(one two three)" =~ $rargs_choices ]]; then
      printf "\e[31m%s\e[33m%s\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Invalid option for " "choices" ": " "$rargs_choices" >&2
      foo_usage >&2
      exit 1
    fi
  fi
  echo "No implementation body found for function foo"
}
