crates/templates/tests/snapshots/function__function_template-19.snap
---
source: crates/templates/tests/function.rs
description: Function that is configured to use a subcommand
expression: output
---
# Function with a local option with choices
foo() {
  local sub="./subcommand.sh"
  echo "Hello, world!"
  $sub $@
}
