crates/templates/tests/snapshots/function__function_template-6.snap
---
source: crates/templates/tests/function.rs
description: Function with local required option
expression: output
---
# Function with a local required option
foo() {
  local rargs_require
  # Parse command arguments
  parse_foo_arguments "$@"

  
  if [[ -z "$rargs_require" ]]; then
    printf "\e[31m%s\e[33m%s\e[31m\e[0m\n\n" "Missing required option: " "require" >&2
    foo_usage >&2
    exit 1
  fi
  echo "No implementation body found for function foo"
}
